--- a/Java til webshop/.classpath
+++ b/Java til webshop/.classpath
@@ -2,5 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="/home/munk/Dropbox/Uni/WebTek/XML uge 2/jdom.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
