--- a/TomcatServer/WebContent/WEB-INF/web.xml
+++ b/TomcatServer/WebContent/WEB-INF/web.xml
@@ -1,15 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
   <display-name>G$glershop</display-name>
-  <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-	<welcome-file>admin/index.jsf</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
-  </welcome-file-list>
   <servlet>
     <servlet-name>Faces Servlet</servlet-name>
     <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
@@ -20,4 +11,12 @@
     <url-pattern>*.jsf</url-pattern>
   </servlet-mapping>
 
+  <filter>
+	  <filter-name>Login</filter-name>
+	  <filter-class>LoginFilter</filter-class>
+  </filter>
+  <filter-mapping>
+	  <filter-name>Login</filter-name>
+	  <url-pattern>/admin/*</url-pattern>
+  </filter-mapping>
 </web-app>
