--- a/TomcatServer/WebContent/WEB-INF/web.xml
+++ b/TomcatServer/WebContent/WEB-INF/web.xml
@@ -11,6 +11,22 @@
     <url-pattern>*.jsf</url-pattern>
   </servlet-mapping>
 
+  <servlet>
+	  <servlet-name>jersey-servlet</servlet-name>
+	  <servlet-class>
+		  org.glassfish.jersey.servlet.ServletContainer
+	  </servlet-class>
+	  <init-param>
+		  <param-name>jersey.config.server.provider.packages</param-name>
+		  <param-value>dk.cs.dwebtek</param-value>
+	  </init-param>
+	  <load-on-startup>1</load-on-startup>
+  </servlet>
+  <servlet-mapping>
+	  <servlet-name>jersey-servlet</servlet-name>
+	  <url-pattern>/rest/*</url-pattern>
+  </servlet-mapping>
+
   <filter>
 	  <filter-name>Login</filter-name>
 	  <filter-class>LoginFilter</filter-class>
