--- a/TomcatServer/WebContent/WEB-INF/web.xml
+++ b/TomcatServer/WebContent/WEB-INF/web.xml
@@ -17,8 +17,8 @@
 		  org.glassfish.jersey.servlet.ServletContainer
 	  </servlet-class>
 	  <init-param>
-		  <param-name>jersey.config.server.provider.packages</param-name>
-		  <param-value>dk.cs.dwebtek</param-value>
+		  <param-name>jersey.config.server.provider.classnames</param-name>
+		  <param-value>LoginNormal</param-value>
 	  </init-param>
 	  <load-on-startup>1</load-on-startup>
   </servlet>
